--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,7 @@ jobs:
           python -m venv venv
           source venv/bin/activate
           pip install --upgrade pip
-          pip install -r api-tests/requirements.txt
+          pip install -r requirements.txt
 
       - name: Run tests
         run: |
