--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,6 +23,6 @@ jobs:
           ssh -o StrictHostKeyChecking=no ubuntu@52.18.93.49 << 'EOF'
             cd /home/ubuntu/nocodb-prod
             git pull origin main
-            docker-compose build
+            docker-compose up -d --build
             sudo systemctl restart myapp.service
           EOF
