added pre-req user

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,6 @@ services:
     volumes:
       - ./nocodb:/usr/app/data/
     restart: unless-stopped
+    environment:
+      NC_ADMIN_EMAIL: admin@example.com
+      NC_ADMIN_PASSWORD: 12341234
