--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,12 +17,11 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-
       - name: Deploy to EC2
         run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@<EC2-IP> <<-'EOF'
-            cd ~/nocodb-testing
-            git pull
-            docker-compose down
-            docker-compose up -d
+          ssh -o StrictHostKeyChecking=no ubuntu@<EC2-IP> << 'EOF'
+          cd ~/nocodb-testing
+          git pull
+          docker-compose down
+          docker-compose up -d
           EOF
