chrome not installed properly

--- a/.github/workflows/ui-testing.yaml
+++ b/.github/workflows/ui-testing.yaml
@@ -53,17 +53,25 @@ jobs:
       - name: Install Chrome & ChromeDriver
         run: |
           sudo apt update
-          # Removed libgconf-2-4 (deprecated)
           sudo apt install -y wget unzip xvfb libxi6 libgbm-dev libnss3 libxshmfence1 libasound2t64
+
+          # Download and install latest stable Google Chrome
           wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
           sudo apt install -y ./google-chrome-stable_current_amd64.deb
+
+          # Get Chrome version number like "139.0.7258.66"
           CHROME_VERSION=$(google-chrome --version | grep -oP "\d+\.\d+\.\d+\.\d+")
-          # Download matching ChromeDriver
-          wget -q -O chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/$CHROME_VERSION/linux64/chromedriver-linux64.zip" || \
-            wget -q -O chromedriver.zip "https://chromedriver.storage.googleapis.com/$CHROME_VERSION/chromedriver_linux64.zip"
+
+          # Download matching ChromeDriver from official "chrome-for-testing" bucket (preferred)
+          wget -q -O chromedriver.zip "https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/${CHROME_VERSION}/linux64/chromedriver-linux64.zip"
+
+          # Unzip ChromeDriver, then move binary correctly (handles folder name)
           unzip chromedriver.zip
-          sudo mv chromedriver /usr/bin/chromedriver
-          sudo chmod +x /usr/bin/chromedriver
+          mv */chromedriver /usr/local/bin/chromedriver
+          sudo chmod +x /usr/local/bin/chromedriver
+
+          # Clean up
+          rm -rf chromedriver.zip google-chrome-stable_current_amd64.deb
 
       - name: Run Selenium tests
         env:
